feat: Added docs for auth endpoints.
