# app/Http/Controllers/AuthController.php
@@ -10,6 +10,54 @@ use App\Models\User;
 
 class AuthController extends Controller
 {
+    
+    /**
+     * @OA\Post(
+     *      path="/sign-in",
+     *      description="Sign in to get access token",
+     *      tags={"auth"},
+     *      @OA\RequestBody(
+     *          description="Data to sign in.",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="email",
+     *                  type="string",
+     *                  example="email@test.xxx",
+     *              ),
+     *              @OA\Property(
+     *                  property="password",
+     *                  type="string",
+     *                  example="password"
+     *              ),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success login",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="object",
+     *                  ref="#/components/schemas/User",
+     *              ),
+     *              @OA\Property(
+     *                  property="metadata",
+     *                  type="object",
+     *                  @OA\Property(
+     *                      property="access_token",
+     *                      type="string",
+     *                  ),
+     *              ),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=401, 
+     *          description="Unauthorized",
+     *      ),
+     * ),
+     */
     public function signIn(Request $request) 
     {
         $validation = Validator::make($request->all(), [
@@ -41,6 +89,54 @@ class AuthController extends Controller
         return response()->json(['message' => 'Unauthorized'], 401);
     }
 
+    /**
+     * @OA\Post(
+     *      path="/sign-up",
+     *      description="Registration",
+     *      tags={"auth"},
+     *      @OA\RequestBody(
+     *          description="Data to sign in.",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="name",
+     *                  type="string",
+     *                  example="test name",
+     *              ),
+     *              @OA\Property(
+     *                  property="email",
+     *                  type="string",
+     *                  example="email@test.xxx",
+     *              ),
+     *              @OA\Property(
+     *                  property="password",
+     *                  type="string",
+     *                  example="password"
+     *              ),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success registration",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="object",
+     *                  ref="#/components/schemas/User",
+     *              ),
+     *              @OA\Property(
+     *                  property="metadata",
+     *                  type="object",
+     *                  @OA\Property(
+     *                      property="access_token",
+     *                      type="string",
+     *                  ),
+     *              ),
+     *          ),
+     *      ),
+     * ),
+     */
     public function signUp(Request $request) 
     {
         $validation = Validator::make($request->all(), [
